--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,8 @@
-<div style="width: 1600px; margin-left: -15px; height: 100px;background-color: black;margin-top: -15px;"></div>
 
-<p style="font-size: 40; font-weight: bold;font-stretch: expanded;color: white; text-align: center; margin-top: -75px;">Billing System</p>
 
-<div style="width: 1600px; margin-left: -15px; height: 30px;background-color:royalblue;margin-top: -20px;">
-  <button style="width: 70px; margin-left: 150px; height: 30px; background-color: transparent; border-color: transparent; ">Home</button>
-  <button style="width: 70px; margin-left: 180px; height: 30px; background-color: transparent; border-color: transparent;">Wallet</button>
-  <button style="width: 70px; margin-left: 210px; height: 30px; background-color: transparent; border-color: transparent;">Help</button>
-  <button style="width: 70px; margin-left: 230px; height: 30px; background-color: transparent; border-color: transparent;">Log out</button>
-  <button style="width: 70px; margin-right: 10px; margin-left: 250px; height: 30px; background-color:aliceblue; border-color:dimgray;border-radius: 5px;">Log in</button>
-  <button style="width: 70px; margin-right: 15px; height: 30px; background-color:aliceblue; border-color:dimgray;border-radius: 5px;">Sign up</button>
-</div>
+<app-header></app-header>
 
-<div style="margin-top: 150px; margin-left: 150px;">
-  <img src="https://files.framed.axure.cloud/gsc/RLRG5B/88/39/90/8839902dd9b74752a9bf0dea09f7c48b/images/home/u0.png?pageId=95d2ec33-980f-4e76-9ee5-23ecb30836b9" style="width: 150px; margin-left: 50px;"/>
-  <img src="https://files.framed.axure.cloud/gsc/RLRG5B/88/39/90/8839902dd9b74752a9bf0dea09f7c48b/images/home/u1.png?pageId=95d2ec33-980f-4e76-9ee5-23ecb30836b9" style="width: 150px;margin-left: 350px;"/>
-  <img src="https://files.framed.axure.cloud/gsc/RLRG5B/88/39/90/8839902dd9b74752a9bf0dea09f7c48b/images/home/u2.png?pageId=95d2ec33-980f-4e76-9ee5-23ecb30836b9" style="width: 150px;margin-left: 450px; "/>
-</div>
 
-<button style="margin-top: 50px; width: 140px;margin-left: 200px; height: 30px; background-color:aliceblue;border-radius: 5px;border-color:dimgray;">Pay Electricity</button>
-<button style="margin-top: 50px; width: 140px;margin-left: 350px; height: 30px; background-color:aliceblue;border-radius: 5px;border-color:dimgray;">Pay Telephone</button>
-<button style="margin-top: 50px; width: 140px;margin-left: 450px; height: 30px; background-color:aliceblue;border-radius: 5px;border-color:dimgray;">Pay Water</button>
+<a class="btn" routerLink="/home">Home</a>
+<a class="btn" routerLink="/wallet">wallet</a>
+<router-outlet></router-outlet>
