add help, login ,suinup and mauy model

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,16 @@
-<nav> <div style="width: 1600px; margin-left: -15px; height: 100px;background-color: black;margin-top: -15px;"></div>
+<nav> <div style="   height: 100px;background-color: black; ">
 
-<p style="font-size: 40; font-weight: bold;font-stretch: expanded;color: white; text-align: center; margin-top: -75px;">Billing System</p>
-
-<div style="width: 1600px; margin-left: -15px; height: 30px;background-color:royalblue;margin-top: -20px;">
-  <a style="width: 70px; margin-left: 150px; height: 30px; background-color: transparent; border-color: transparent; ">Home</a>
-  <a style="width: 70px; margin-left: 180px; height: 30px; background-color: transparent; border-color: transparent;">Wallet</a>
-  <a style="width: 70px; margin-left: 210px; height: 30px; background-color: transparent; border-color: transparent;">Help</a>
-  <a style="width: 70px; margin-left: 230px; height: 30px; background-color: transparent; border-color: transparent;">Log out</a>
-  <a style="width: 70px; margin-right: 10px; margin-left: 250px; height: 30px; background-color:aliceblue; border-color:dimgray;border-radius: 5px;">Log in</a>
-  <a style="width: 70px; margin-right: 15px; height: 30px; background-color:aliceblue; border-color:dimgray;border-radius: 5px;">Sign up</a>
+  <div style=" font-weight: bold; color: white; text-align: center; ">Billing System</div>
+  
+  
+  <div style=" padding: 15px;  height: 30px;background-color:royalblue; ">
+    <a class="header-btn"style=""routerLink="/home">Home</a>
+    <a class="header-btn"  routerLink="/wallet" >Wallet</a>
+    <a class="header-btn" routerLink="/help">Help</a>
+    <a class="header-btn"routerLink="/logout" >Log out</a>
+    <a class="header-btn"routerLink="/login">Log in</a>
+    <a class="header-btn"routerLink="/signup">Sign up</a>
+  </div>
+  
 </div>
-
 </nav>
