--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,3 +8,228 @@
         border-color:dimgray;
 
 }
+.w-50 {
+        width: 50% !important;
+     }
+     
+     .w-40 {
+        width: 40% !important;
+     }
+     
+     .w-45 {
+        width: 45% !important;
+     }
+     
+     .w-100 {
+        width: 100% !important;
+     }
+     
+     .w-30 {
+        width: 30% !important;
+     }
+     
+     .w-35 {
+        width: 35% !important;
+     }
+     
+     .w-20 {
+        width: 20% !important;
+     }
+     
+     .w-10 {
+        width: 10% !important;
+     }
+     
+     .w-25 {
+        width: 25% !important;
+     }
+     
+     .w-50 {
+        width: 50% !important;
+     }
+     
+     .w-60 {
+        width: 60% !important;
+     }
+     
+     .w-65 {
+        width: 65% !important;
+     }
+     
+     .w-70 {
+        width: 70% !important;
+     }
+     
+     .w-80 {
+        width: 80% !important;
+     }
+     
+     .w-90 {
+        width: 90% !important;
+     }
+     
+     .h-20 {
+        height: 20% !important;
+     }
+     
+     .h-30 {
+        height: 30% !important;
+     }
+     
+     .h-40 {
+        height: 40% !important;
+     }
+     
+     .h-50 {
+        height: 50% !important;
+     }
+     
+     .h-60 {
+        height: 60% !important;
+     }
+     
+     .h-70 {
+        height: 70% !important;
+     }
+     
+     .h-80 {
+        height: 80% !important;
+     }
+     
+     .h-90 {
+        height: 90% !important;
+     }
+     
+     .h-45 {
+        height: 45% !important;
+     }
+     
+     .h-100 {
+        height: 100% !important;
+     }
+     
+     .mt-5 {
+     
+        margin-top: 5%;
+     }
+     
+     .m-15-px {
+        margin-left: 15px;
+     }
+     
+     .mb-5 {
+        margin-bottom: 5%;
+     }
+     
+     .ml-5 {
+     
+        margin-left: 5%;
+     }
+     .ml-4 {
+     
+        margin-left: 4%;
+     }
+     .ml-3 {
+     
+        margin-left: 3%;
+     }
+     .ml-2 {
+     
+        margin-left: 2%;
+     }
+     
+     .ml-1 {
+     
+        margin-left: 1%;
+     }
+     
+     .m-5 {
+     
+        margin: 5%;
+     }
+     
+     .m-4 {
+     
+        margin: 4%;
+     }
+     
+     .m-3 {
+     
+        margin: 3%;
+     }
+     
+     .m-2 {
+     
+        margin: 2%;
+     }
+     
+     .m-1 {
+     
+        margin: 1%;
+     }
+     
+     .pl-5 {
+     
+        padding-left: 5%;
+     }
+     
+     .pl-4 {
+     
+        padding-left: 4%;
+     }
+     
+     .pl-3 {
+     
+        padding-left: 3%;
+     }
+     
+     .pl-2 {
+     
+        padding-left: 2%;
+     }
+     
+     .pl-1 {
+     
+        padding-left: 1%;
+     }
+     
+     .pr-5 {
+        padding-right: 5%;
+     }
+     
+     .pt-5 {
+        padding-top: 5%;
+     }
+     
+     .pb-5 {
+        padding-bottom: 5%;
+     }
+     
+     .p-5 {
+     
+        padding: 5%;
+     }
+     
+     .inline-block {
+        display: inline-block !important;
+     }
+     
+     .inline {
+        display: inline !important;
+     }
+     
+     .block {
+        display: block !important;
+     }
+     
+     .float-left {
+        float: left !important;
+     }
+     
+     .float-right {
+        float: right !important;
+     }
+     
+     .bg-black {
+        background: black !important;
+     }
