--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,13 @@
-<nav> <div style="   height: 100px;background-color: black; ">
-
-  <div style=" font-weight: bold; color: white; text-align: center; ">Billing System</div>
+<nav> 
+ 
   
-  
-  <div style=" padding: 15px;  height: 30px;background-color:royalblue; ">
+  <div class="header">
     <a class="header-btn"style=""routerLink="/home">Home</a>
     <a class="header-btn"  routerLink="/wallet" >Wallet</a>
     <a class="header-btn" routerLink="/help">Help</a>
-    <a class="header-btn"routerLink="/logout" >Log out</a>
+    <a class="header-btn "routerLink="/signup">Sign up</a>
     <a class="header-btn"routerLink="/login">Log in</a>
-    <a class="header-btn"routerLink="/signup">Sign up</a>
+    <a class="header-btn logout_btn"routerLink="/logout" >Log out</a>
   </div>
-  
-</div>
+   
 </nav>
